media/templates/flaresolverr/flaresolver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "flaresolverr.raspberrypi"
  name: "flaresolverr-ingress"
spec:
  tls:
  - hosts:
    - flaresolverr.raspberrypi
    secretName: flaresolverr-auto-certificate-key-pair
  rules:
  - host: flaresolverr.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaresolverr
            port:
              name: http
